# Web_HW14

./: .coverage  .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
docs/source/: conf.py
migrations/: env.py
migrations/versions/: 67558e63c1b1_new.py
src/: schemas.py
src/config/: config.py  messages.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test_main.py  test_route_auth.py  test_route_contacts.py  test_service_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
